--- a/crates/ide/Cargo.toml
+++ b/crates/ide/Cargo.toml
@@ -38,6 +38,8 @@ text-edit.workspace = true
 # ide should depend only on the top-level `hir` package. if you need
 # something from some `hir-xxx` subpackage, reexport the API via `hir`.
 hir.workspace = true
+tokio = { version = "1.26.0", features = ["fs", "rt-multi-thread"], optional = true }
+futures = { version = "0.3.27", features = ["async-await"], optional = true }
 
 [target.'cfg(not(any(target_arch = "wasm32", target_os = "emscripten")))'.dependencies]
 toolchain.workspace = true
@@ -50,3 +52,4 @@ test-utils.workspace = true
 
 [features]
 in-rust-tree = ["ide-assists/in-rust-tree", "ide-diagnostics/in-rust-tree"]
+parallelize = ["dep:futures", "dep:tokio"]
