--- a/crates/rust-analyzer/Cargo.toml
+++ b/crates/rust-analyzer/Cargo.toml
@@ -46,6 +46,8 @@ tracing-subscriber = { version = "0.3.16", default-features = false, features = 
 tracing-log = "0.1.3"
 tracing-tree = "0.2.1"
 always-assert = "0.1.2"
+# tokio = { version = "1.26.0", features = ["fs", "rt-multi-thread"], optional = true }
+cfg-if = "1.0.0"
 
 cfg.workspace = true
 flycheck.workspace = true
@@ -67,6 +69,8 @@ tt.workspace = true
 vfs-notify.workspace = true
 vfs.workspace = true
 
+regloc = { workspace = true, optional = true }
+
 [target.'cfg(windows)'.dependencies]
 winapi = "0.3.9"
 
@@ -85,8 +89,5 @@ mbe.workspace = true
 [features]
 jemalloc = ["jemallocator", "profile/jemalloc"]
 force-always-assert = ["always-assert/force"]
-in-rust-tree = [
-    "proc-macro-srv/sysroot-abi",
-    "ide/in-rust-tree",
-    "syntax/in-rust-tree",
-]
+in-rust-tree = ["proc-macro-srv/sysroot-abi", "ide/in-rust-tree", "syntax/in-rust-tree"]
+regloc = ["dep:regloc"]
